depoyments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping
  template:
    metadata:
      labels:
        app: ping
    spec:
      containers:
        - name: ping-container
          image: ping-service:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "18m"
              memory: "16Mi"
