depoyments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /ping
            pathType: Prefix
            backend:
              service:
                name: ping-service
                port:
                  number: 80
